# python-core

./: .core  .gitignore  Justfile  README.md  copy.ipynb  dev.ipynb  main.py  requirements.txt
.dev/: dev.ipynb
.scripts/: extract.ipynb  rescale.ipynb
1.boxes/: demo.ipynb  deps.ipynb  pyproject.toml
1.boxes/src/moveread/boxes/: __init__.pyi  annotations.py
1.labels/: demo.ipynb  pyproject.toml
1.labels/src/moveread/labels/: __init__.pyi
2.annotations/: Justfile  pyproject.toml
2.annotations/src/moveread/annotations/: __init__.pyi  (+3 more)
2.annotations/ts/: package.json
2.annotations/ts/src/: games.ts  images.ts  players.ts  sheets.ts
3.core/: Justfile  demo.ipynb  pyproject.toml
3.core/ts/: package.json
3.core/ts/src/: models.ts
4.export/: demo.ipynb  pyproject.toml
5.export/: demo.ipynb
5.sdk/: pyproject.toml
annotations/: Justfile  demo.ipynb  pyproject.toml
annotations/src/moveread/annotations/games/: __init__.py  games.py
annotations/src/moveread/annotations/images/: __init__.py  images.py
annotations/src/moveread/annotations/players/: __init__.py  players.py
annotations/src/moveread/annotations/scripts/: tsgen.py
annotations/src/moveread/annotations/sheets/: sheets.py
annotations/ts/src/: games.ts  images.ts  players.ts  sheets.ts
api/: Justfile  README.md  demo.ipynb  pyproject.toml
api/client/: README.md  package.json
api/client/src/: models.ts  schemas.ts  services.ts
api/src/moveread/api/: __init__.py
api/src/moveread/api/api/: __init__.py  api.py
api/src/moveread/api/api/games/: games.py
api/src/moveread/api/api/images/: __init__.py  images.py
api/src/moveread/api/api/ops/: __init__.py  ops.py
api/src/moveread/api/drivers/: local.py
api/src/moveread/api/scripts/: __init__.py  client_gen.py  local.py
boxes/: README.md  pyproject.toml
core/: pyproject.toml
core/ts/: README.md  package.json
core/ts/src/: index.ts  models.ts
datasets/: pyproject.toml
export/: demo.ipynb  pyproject.toml
export/src/moveread/export/: __init__.py
export/src/moveread/export/games/: __init__.py  games.py
export/src/moveread/export/images/: __init__.py  images.py
export/src/moveread/export/players/: __init__.py  boxes.py  labels.py
export/src/moveread/export/sheets/: __init__.py  sheets.py
labels/: README.md  pyproject.toml
lib/annotations/ts/: README.md  package.json
lib/boxes/: demo.ipynb
lib/core/: Justfile
lib/labels/: demo.ipynb
lib/local/: pyproject.toml
lib/local/src/moveread/local/: api.py
lib/sdk/: demo.ipynb
local/: README.md
scripts/: dev-core.ipynb  exporting.ipynb  missing-scans.ipynb
scripts/bulk_extraction/: Justfile  README.md  bulk_extr.ipynb  pyproject.toml
scripts/bulk_extraction/client/: README.md  package.json
scripts/scrape-llobregat/: scrape-llobregat.ipynb
sdk/: README.md  pyproject.toml
(+80 files in other folders)
