[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moveread-annotations"
version = "0.1.0"
authors = [
  {name="Marcel Claramunt", email="marcel@moveread.com"}
]
description = "Annotation schemas for the Moveread Core"
dependencies = [
  "pydantic", "haskellian-either",
  "moveread-labels", "moveread-boxes", "moveread-errors"
]
requires-python = ">=3.10"
readme = {file="README.md", content-type="text/markdown"}

# [project.urls]
# repo = "<GIT_REPO_URL>"

# [project.optional-dependencies]
# test = [
#   "pytest < 5.0.0",
#   "pytest-cov[all]"
# ]