[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moveread-api"
version = "0.1.1"
authors = [
  {name="Marcel Claramunt", email="marcel@moveread.com"}
]
description = "FastAPI app for the moveread core"
dependencies = [
  "fastapi", "python-multipart",
  "moveread-sdk"
]
requires-python = ">=3.10"
readme = {file="README.md", content-type="text/markdown"}

# [project.urls]
# repo = "<GIT_REPO_URL>"

[project.scripts]
moveread-api = "moveread.api.scripts.local:main"
moveread-api-clientgen = "moveread.api.scripts.client_gen:main"

[project.optional-dependencies]
local = ["uvicorn", "moveread-local"]
client-gen = ["openapi-ts"]
# test = [
#   "pytest < 5.0.0",
#   "pytest-cov[all]"
# ]