[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moveread-local"
version = "0.1.0"
authors = [
  {name="Marcel Claramunt", email="marcel@moveread.com"}
]
description = "Local implementation of the Moveread CoreAPI, using SQLite for JSON and the filesystem for blobs"
dependencies = [
  "kv-sqlite-sync", "kv-fs", "kv-api",
  "moveread-core"
]
requires-python = ">=3.10"
readme = {file="README.md", content-type="text/markdown"}

[project.urls]
repo = "https://github.com/moveread/python-core"

# [project.optional-dependencies]
# test = [
#   "pytest < 5.0.0",
#   "pytest-cov[all]"
# ]